# rust-repos

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  ci-update.sh
.github/: dependabot.yml
.github/workflows/: test.yml  updater.yml
data/: github.csv  state.json
src/: config.rs  data.rs  main.rs  prelude.rs  utils.rs
src/github/: api.rs  mod.rs
src/gitlab/: mod.rs
