[package]
name = "rust-repos"
version = "0.1.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]

[dependencies]
failure = "0.1.5"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.88"
log = "0.4.6"
env_logger = "0.9.1"
csv = "1.0.5"
ctrlc = "3.1.1"
crossbeam-utils = "0.8.12"
