[package]
name = "rust-repos"
edition = "2021"
version = "0.1.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]

[dependencies]
failure = "0.1.8"
reqwest = { version = "0.12.8", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
log = "0.4.22"
env_logger = "0.11.5"
csv = "1.3.0"
ctrlc = "3.4.5"
crossbeam-utils = "0.8.20"
