[package]
name = "rust-repos"
edition = "2021"
version = "0.2.0"
authors = [
    "Pietro Albini <pietro@pietroalbini.org>",
    "Vivian Roest <vivian@0x76.dev>",
]

[dependencies]
reqwest = { version = "0.12.8", features = [
    "blocking",
    "json",
    "rustls-tls",
], default-features = false }
serde = "1"
serde_derive = "1"
serde_json = "1"
csv = "1.3.0"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.40", features = ["full", "tracing"] }
dotenvy = "0.15.7"
color-eyre = "0.6.3"
tracing = "0.1.40"
enum-map = { version = "2.7.3", features = ["serde"] }
thiserror = "1"
